--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="hello">Hello World, SailLogActivity!</string>
     <string name="app_name">SailLog</string>
-    <string name="track_location">Track location</string>
+    <string name="track_location">Location Tracking</string>
     <string name="engine">Engine</string>
     <string name="trip_name">Name of the trip</string>
     <string name="start_location">Start location</string>
