--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="longitude">Longitude</string>
     <string name="export">Export data</string>
     <string name="short_export">Export</string>
+    <string name="position">Position</string>
+    <string name="empty"></string>
 </resources>
