--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">SailLog</string>
     <string name="track_location">Location Tracking</string>
     <string name="engine">Engine</string>
-    <string name="trip_name">Name of the trip</string>
+    <string name="trip_name">Trip name</string>
     <string name="start_location">Start location</string>
     <string name="destination">Destination</string>
     <string name="speed">Speed</string>
@@ -23,4 +23,11 @@
     <string name="main_sail">Main</string>
     <string name="jib">Jib</string>
     <string name="spinnaker">Spinnaker</string>
+    <string name="select">Select</string>
+    <string name="cancel_button">Cancel</string>
+    <string name="no_trip_selected">No trip selected</string>
+    <string name="new_trip">Name of new trip or leg</string>
+    <string name="enter_trip_name">Enter name for a new trip</string>
+    <string name="trip_to_select">Select: %s</string>
+    <string name="select_a_trip">Pick a trip</string>
 </resources>
