--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,33 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello">Hello World, SailLogActivity!</string>
     <string name="app_name">SailLog</string>
-    <string name="track_location">Location Tracking</string>
-    <string name="engine">Engine</string>
-    <string name="trip_name">Trip name</string>
-    <string name="start_location">Start location</string>
+    <string name="cancel_button">Cancel</string>
     <string name="destination">Destination</string>
-    <string name="speed">Speed</string>
-    <string name="heading">Heading</string>
-    <string name="latitude">Latitude</string>
-    <string name="longitude">Longitude</string>
+    <string name="engine">Engine</string>
+    <string name="enter_trip_name">Enter name for a new trip</string>
     <string name="export_db">Export as database</string>
-    <string name="short_export_db">Export db</string>
-    <string name="position">Position</string>
-    <string name="no_position_data">Position: -</string>
-    <string name="no_speed_heading_data">Speed: -, Heading: -</string>
     <string name="export_kml">Export as KML</string>
     <string name="export_kml_short">Export KML</string>
-    <string name="sail_plan">Sails</string>
-    <string name="sails_hoisted">Hoisted</string>
-    <string name="main_sail">Main</string>
+    <string name="heading">Heading</string>
+    <string name="hello">Hello World, SailLogActivity!</string>
     <string name="jib">Jib</string>
-    <string name="spinnaker">Spinnaker</string>
-    <string name="select">Select</string>
-    <string name="cancel_button">Cancel</string>
-    <string name="no_trip_selected">No trip selected</string>
+    <string name="latitude">Latitude</string>
+    <string name="longitude">Longitude</string>
+    <string name="main_sail">Main sail</string>
     <string name="new_trip">Name of new trip or leg</string>
-    <string name="enter_trip_name">Enter name for a new trip</string>
-    <string name="trip_to_select">Select: %s</string>
+    <string name="no_position_data">Position: -</string>
+    <string name="no_speed_heading_data">Speed: -, Heading: -</string>
+    <string name="no_trip_selected">Click to select a trip</string>
+    <string name="onoff">On/Off</string>
+    <string name="position">Position</string>
+    <string name="select">Select</string>
     <string name="select_a_trip">Pick a trip</string>
+    <string name="short_export_db">Export db</string>
+    <string name="speed">Speed</string>
+    <string name="spinnaker">Spinnaker</string>
+    <string name="start_location">Start location</string>
+    <string name="track_location">Location Tracking</string>
+    <string name="trip_name">Trip name</string>
+    <string name="trip_to_select">Select: %s</string>
 </resources>
