--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="trip_name">Trip name</string>
     <string name="trip_to">End location</string>
     <string name="trip_to_select">Select: %s</string>
+    <string name="add_new">Add new</string>
 </resources>
