--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="add_new">Add new</string>
     <string name="app_name">SailLog</string>
     <string name="cancel_button">Cancel</string>
     <string name="delete_this_trip">Delete</string>
     <string name="destination">Destination</string>
+    <string name="end_time">End time</string>
     <string name="engine">Engine</string>
     <string name="enter_trip_name">Enter name for a new trip</string>
     <string name="export_db">Export as database</string>
@@ -28,15 +30,15 @@
     <string name="short_export_db">Export db</string>
     <string name="speed">Speed</string>
     <string name="spinnaker">Spinnaker</string>
+    <string name="start_time">Start time</string>
     <string name="time_span">First and last entry of trip</string>
     <string name="total_distance">Distance</string>
     <string name="total_sailing_time">Time sailing</string>
-    <string name="total_engine_time">Time on engine</string>
+    <string name="total_engine_time">Time motoring</string>
     <string name="track_location">Location Tracking</string>
     <string name="trip_all_fields_cannot_be_empty">You must enter a name, a start location, or an end location</string>
     <string name="trip_from">Start location</string>
     <string name="trip_name">Trip name</string>
     <string name="trip_to">End location</string>
     <string name="trip_to_select">Select: %s</string>
-    <string name="add_new">Add new</string>
 </resources>
