--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -40,8 +40,8 @@
     <string name="start_time">Start time</string>
     <string name="time_span">First and last entry of trip</string>
     <string name="total_distance">Distance</string>
-    <string name="total_sailing_time">Time sailing</string>
-    <string name="total_engine_time">Time motoring</string>
+    <string name="total_sailing_time">Sail time</string>
+    <string name="total_engine_time">Engine time</string>
     <string name="track_location">Location Tracking</string>
     <string name="trip_all_fields_cannot_be_empty">You must enter a name, a start location, or an end location</string>
     <string name="trip_from">Start location</string>
