delete: cannot delete the selected trip.
Previously, the delete button in the trip edit view
was active for the selected trip. It just did not do anything.
Now the delete button is disabled for an empty trip,
or for the currently selected trip.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -58,4 +58,5 @@
     <string name="trip_to_select">Select: %s</string>
     <string name="sail_up">Up</string>
     <string name="yes">Yes</string>
+    <string name="cannot_delete_selected">You cannot delete the selected trip</string>
 </resources>
